@@ -14,6 +14,7 @@ Incompatible changes
 
 Bugfixes
 --------
+- fix task resolution hang when a connected TCP session yields no answers (!1226)
 - doh2: fix CORS by adding `access-control-allow-origin: *` (!1246)
 - net: fix listen by interface - add interface suffix to link-local IPv6 (!1253)
 
